--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
     "consultation"
   ],
   "website": "https://tokbox.com",
-  "repository": "https://github.com/opentok/adserverkit",
+  "repository": "https://github.com/opentok/adserver-kit",
   "addons": ["cleardb"],
   "env": {
     "OPENTOK_KEY": {
